--- a/member.html
+++ b/member.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Panilla members!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/uikit.min.css" />
@@ -20,13 +20,13 @@
               </a>
             </li>
             <li>
-              <a href="./index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
-                Download
+              <a href="./index.html#topics"><span uk-icon="file-text" class="uk-margin-small-right"></span>
+                Topics
               </a>
             </li>
             <li>
-              <a href="./index.html#guide"><span uk-icon="file-text" class="uk-margin-small-right"></span>
-                Guide
+              <a href="./index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
+                Download
               </a>
             </li>
             <li>
@@ -50,15 +50,15 @@
       </div>
     </nav>
 
-    <div id="offcanvas-push" uk-offcanvas="mode: push; overlay: true">
+    <div id="offcanvas-push" uk-offcanvas="mode: push; overlay: false">
       <div class="uk-offcanvas-bar">
         <button class="uk-offcanvas-close" type="button" uk-close></button>
         <ul class="uk-nav">
-          <li><a href="#">TOP</a></li>
-          <li><a href="#downloads">DOWNLOAD</a></li>
-          <li><a href="#guide">GUIDE</a></li>
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#about">ABOUT</a></li>
+          <li><a href="./index.html#">TOP</a></li>
+          <li><a href="./index.html#topics">TOPICS</a></li>
+          <li><a href="./index.html#downloads">DOWNLOAD</a></li>
+          <li><a href="./index.html#faq">FAQ</a></li>
+          <li><a href="./index.html#about">ABOUT</a></li>
         </ul>
       </div>
     </div>
