--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Panilla!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/uikit.min.css" />
@@ -15,28 +15,27 @@
         <div class="uk-navbar-center">
           <ul class="uk-navbar-nav">
             <li>
-              <a href="#top"><span uk-icon="home" class="uk-margin-small-right"></span>
+              <a href="./index.html#top"><span uk-icon="home" class="uk-margin-small-right"></span>
                 Top
               </a>
             </li>
             <li>
-              <a href="#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
+              <a href="./index.html#topics"><span uk-icon="file-text" class="uk-margin-small-right"></span>
+                Topics
+              </a>
+            </li>
+            <li>
+              <a href="./index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
                 Download
               </a>
             </li>
-<!--            <li>
-              <a href="#guide"><span uk-icon="file-text" class="uk-margin-small-right"></span>
-                Guide
-              </a>
-            </li>
--->
             <li>
-              <a href="#faq"><span uk-icon="question" class="uk-margin-small-right"></span>
+              <a href="./index.html#faq"><span uk-icon="question" class="uk-margin-small-right"></span>
                 FAQ
               </a>
             </li>
             <li>
-              <a href="#about"><span uk-icon="users" class="uk-margin-small-right"></span>
+              <a href="./index.html#about"><span uk-icon="users" class="uk-margin-small-right"></span>
                 About
               </a>
             </li>
@@ -51,17 +50,15 @@
       </div>
     </nav>
 
-    <div id="offcanvas-push" uk-offcanvas="mode: push; overlay: true">
+    <div id="offcanvas-push" uk-offcanvas="mode: push; overlay: false">
       <div class="uk-offcanvas-bar">
         <button class="uk-offcanvas-close" type="button" uk-close></button>
         <ul class="uk-nav">
-          <li><a href="#">TOP</a></li>
-          <li><a href="#downloads">DOWNLOAD</a></li>
-<!--
-          <li><a href="#guide">GUIDE</a></li>
--->
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#about">ABOUT</a></li>
+          <li><a href="./index.html#">TOP</a></li>
+          <li><a href="./index.html#topics">TOPICS</a></li>
+          <li><a href="./index.html#downloads">DOWNLOAD</a></li>
+          <li><a href="./index.html#faq">FAQ</a></li>
+          <li><a href="./index.html#about">ABOUT</a></li>
         </ul>
       </div>
     </div>
@@ -76,7 +73,22 @@
         </div>
       </div>
 
-      <div class="uk-margin-large-top uk-width-4-5 uk-container">
+      <div class="uk-flex uk-flex-center uk-margin-large-top">
+        <div class="uk-width-1-1">
+          <div class="uk-card uk-card-secondary uk-card-large uk-text-center">
+            <div class="uk-card-title">
+              Coming Soon
+            </div>
+            <div class="uk-card-body uk-text-large">
+              2022年春 配布マップ公開予定
+            </div>
+          </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="uk-margin-large-top uk-width-4-5@m uk-container">
         <div class="uk-flex uk-margin-top">
           <div class="uk-width-1-2 uk-margin-large-right">
             <img src="./img/1.png">
@@ -101,40 +113,79 @@
         </div>
       </div>
 
+      <a name="topics"></a>
+      <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
+        Topics
+      </div>
+      <div class="uk-container uk-width-4-5@m">
+        <div class="">
+          <div class="uk-width-1-1 uk-card uk-card-default">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
+                データパック配布第一弾  <nobr class="uk-text-meta">2022-02-01</nobr>
+              </div>
+              でんでんが制作したデータパック「DENDEN'S COMPASS VER.1.0」が配布開始！
+            </div>
+          </div>
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
+                公式HP開設！  <nobr class="uk-text-meta">2022-02-01</nobr>
+              </div>
+              公式HPが開設されました！！
+            </div>
+          </div>
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
+                Panilla設立！  <nobr class="uk-text-meta">2021-09-11</nobr>
+              </div>
+              当グループが設立されました！！
+            </div>
+          </div>
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
+                Read more
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
       <a name="downloads"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
-          Douwnloads
+          Downloads
       </div>
-      <div class="">
-        <ul class="uk-subnav uk-subnav-pill uk-flex-center" uk-switcher="connect: .switcher-container">
-            <li><a href="#">
-              ダンジョンみたいなの
-            </a></li>
+      <div class="uk-container uk-width-4-5@m">
+        <div class="uk-card-body uk-card-default uk-width-1-1">
+          <ul class="uk-subnav uk-subnav-pill uk-flex-center" uk-switcher="connect: .switcher-container">
             <li><a href="#">
               denden's Compass ver.1.0
             </a></li>
             <li><a href="#">
+              ダンジョンみたいなの
+            </a></li>
+            <li><a href="#">
               DP/RP名称
             </a></li>
-        </ul>
-        <div class="uk-container uk-width-4-5@m">
-          <ul class="uk-switcher switcher-container">
-              <li>
-                <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.16.5+</span>
-              </li>
+          </ul>
+          <div class="uk-container uk-width-4-5@m">
+            <ul class="uk-switcher switcher-container">
               <li>
                 <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.18.1</span>
               </li>
               <li>
+                <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.16.5+</span>
+              </li>
+              <li>
                 <span class="uk-badge">配布データの種類</span> <span class="uk-badge">対応バージョン</span>
               </li>
-          </ul>
-          <ul class="uk-switcher switcher-container">
+            </ul>
+            <ul class="uk-switcher switcher-container">
               <li>
-                製作中<br>
-                <a href="#">DL link</a>
-              </li>
-              <li>
+                画面上に方角を表示させるデータパックです<br>
                 制作者 でんでん<br>
                 <span uk-icon="icon: cloud-download"></span> <a href="./dist/dendens_Compass_Resources.zip">dendens_Compass_Resources</a>
                 <div>
@@ -175,30 +226,36 @@
 
               </li>
               <li>
+                製作中<br>
+                <a href="#">DL link</a>
+              </li>
+              <li>
                 まだ作られていないリソースパック<br>
                 <a href="#">DL link</a>
               </li>
-          </ul>
+            </ul>
+          </div>
         </div>
       </div>
 
-<!--
-      <a name="guide"></a>
+      <a name="donation"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
-        Guide
+        Donation
       </div>
-      <div class="uk-flex uk-flex-center uk-margin-large-top">
-        <div class="">
-          ガイドリンク
+      <div class="uk-flex uk-flex-center">
+        <div class="uk-container uk-width-4-5@m">
+          <div class="uk-card-body uk-card-default uk-width-1-1">
+            ここに内容
+          </div>
         </div>
       </div>
--->
 
       <a name="faq"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
         FAQ
       </div>
       <div class="uk-container uk-margin-large-top　uk-position-relative uk-width-4-5@m">
+        <div class="uk-card-body uk-card-default">
         <ul uk-accordion class="">
           <li>
             <a class="uk-accordion-title uk-background-muted" href="#">
@@ -226,14 +283,15 @@
           </li>
         </ul>
       </div>
+      </div>
 
       <a name="about"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
         About
       </div>
       <div>
-        <div class="uk-flex uk-flex-center uk-margin-large-top">
-          <a class="uk-card uk-card-default uk-card-body uk-link-toggle" href="">
+        <div class="uk-flex uk-flex-center">
+          <a class="uk-card uk-card-default uk-card-body uk-link-toggle" href="./project.html">
             About this project
           </a>
           <!--<div class="uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle" uk-grid>
@@ -272,7 +330,9 @@
           </div>
         </div>
     </div>
-
+    <div class="uk-flex uk-flex-center uk-margin-top">
+      <a href="./attention.html">利用規約・免責事項</a>
+    </div>
 
     <hr>
     <footer class="uk-flex uk-flex-center uk-margin-bottom">
