--- a/member.html
+++ b/member.html
@@ -128,7 +128,7 @@
               <div class="uk-card-body">
                 <h3 class="uk-card-title">ALLICIN (ｱﾘｼﾝ)</h3>
                 <p>コメントなし</p>
-                <a class="" uk-icon="icon:twitter; ratio:1.5" href="https://twitter.com/C0MET_JP"></a><a href="https://twitter.com/C0MET_JP">@C0MET_JP</a><br>
+                <!-- <a class="" uk-icon="icon:twitter; ratio:1.5" href="https://twitter.com/C0MET_JP"></a><a href="https://twitter.com/C0MET_JP">@C0MET_JP</a><br> -->
                 <span class="uk-badge">texture</span><br>
               </div>
             </div>
@@ -169,6 +169,32 @@
                 <p>お仕事の依頼はDMに！</p>
                 <a class="" uk-icon="icon:twitter; ratio:1.5" href="https://twitter.com/tks_me"></a><a href="https://twitter.com/tks_me">@tks_me</a><br>
                 <span class="uk-badge">Command</span> <span class="uk-badge">Server</span> <span class="uk-badge">web</span><br>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="uk-card uk-card-default">
+              <div class="uk-card-media-top">
+                <img src="./img/unknown.png" alt="">
+              </div>
+              <div class="uk-card-body">
+                <h3 class="uk-card-title">ターザン(TAZN)</h3>
+                <p>私日本人と思います。、</p>
+                <a class="" uk-icon="icon:twitter; ratio:1.5" href="https://mobile.twitter.com/tazn112?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"></a><a href="https://mobile.twitter.com/tazn112?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">@tazn112</a><br>
+                <span class="uk-badge">scenario</span> <span class="uk-badge">texture</span><br>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="uk-card uk-card-default">
+              <div class="uk-card-media-top">
+                <img src="./img/unknown.png" alt="">
+              </div>
+              <div class="uk-card-body">
+                <h3 class="uk-card-title">あずまる</h3>
+                <p>コメントなし</p>
+                <!-- <a class="" uk-icon="icon:twitter; ratio:1.5" href="https://twitter.com/tks_me"></a><a href="https://twitter.com/tks_me">@tks_me</a><br> -->
+                <span class="uk-badge">Movie / graphics</span><br>
               </div>
             </div>
           </div>
