add tex_d2_32 resource pack

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               denden's Compass ver.1.0
             </a></li>
             <li><a href="#">
-              ダンジョンみたいなの
+              TEX－D2 NE 32x
             </a></li>
             <li><a href="#">
               DP/RP名称
@@ -178,7 +178,7 @@
                 <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.18.1</span>
               </li>
               <li>
-                <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.16.5+</span>
+                <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.16+</span>
               </li>
               <li>
                 <span class="uk-badge">配布データの種類</span> <span class="uk-badge">対応バージョン</span>
@@ -227,8 +227,17 @@
 
               </li>
               <li>
-                製作中<br>
-                <a href="#">DL link</a>
+                ファンタジー風リソースパック 疑似レイトレーシング対応<br>
+                制作者 mutuki_1204<br>
+                <span uk-icon="icon: cloud-download"></span><br>
+                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.16_v1.015.zip">TEX_D2 NE_32x_1.16_v1.015</a><br>
+                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.17_v1.015.zip">TEX_D2 NE_32x_1.17_v1.015</a><br>
+                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.18_v1.015.zip">TEX_D2 NE_32x_1.18_v1.015</a><br>
+                <div>
+                  <img data-src="./img/TEX_D2_32x/1.png" width="500" alt="" uk-img><br>
+                  <img data-src="./img/TEX_D2_32x/2.jpeg" width="500" alt="" uk-img><br>
+                  <img data-src="./img/TEX_D2_32x/3.jpeg" width="500" alt="" uk-img><br>
+                </div>
               </li>
               <li>
                 まだ作られていないリソースパック<br>
