--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
           <div class="uk-width-1-1 uk-card uk-card-default">
             <div class="uk-card-body">
               <div class="uk-card-title">
-                データパック配布第一弾  <nobr class="uk-text-meta">2022-02-01</nobr>
+                データパック・リソースパック配布第一弾  <nobr class="uk-text-meta">2022-02-01</nobr>
               </div>
-              でんでんが制作したデータパック「DENDEN'S COMPASS VER.1.0」が配布開始！
+              でんでんが制作したデータパック「DENDEN'S COMPASS VER.1.0」が配布開始！ <br>
+              睦月が制作したリソースパック「TEX－D2 NE 32x」が配布開始！
             </div>
           </div>
           <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
@@ -144,6 +145,7 @@
               当グループが設立されました！！
             </div>
           </div>
+<!--
           <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
             <div class="uk-card-body">
               <div class="uk-card-title">
@@ -152,6 +154,7 @@
 
             </div>
           </div>
+-->
         </div>
       </div>
 
@@ -186,6 +189,7 @@
             </ul>
             <ul class="uk-switcher switcher-container">
               <li>
+                <img data-src="./img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="" uk-img><br>
                 画面上に方角を表示させるデータパックです<br>
                 制作者 でんでん<br>
                 <span uk-icon="icon: cloud-download"></span> <a href="./dist/dendens_Compass_Resources.zip">dendens_Compass_Resources</a>
@@ -231,8 +235,8 @@
                 制作者 mutuki_1204<br>
                 <span uk-icon="icon: cloud-download"></span><br>
                 <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.16_v1.015.zip">TEX_D2 NE_32x_1.16_v1.015</a><br>
-                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.17_v1.015.zip">TEX_D2 NE_32x_1.17_v1.015</a><br>
-                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.18_v1.015.zip">TEX_D2 NE_32x_1.18_v1.015</a><br>
+                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.17_v1.015.zip">TEX_D2 NE_32x_1.17.x_v1.015</a><br>
+                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.18_v1.015.zip">TEX_D2 NE_32x_1.18.x_v1.015</a><br>
                 <div>
                   <img data-src="./img/TEX_D2_32x/1.png" width="500" alt="" uk-img><br>
                   <img data-src="./img/TEX_D2_32x/2.jpeg" width="500" alt="" uk-img><br>
@@ -248,6 +252,7 @@
         </div>
       </div>
 
+<!--
       <a name="donation"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
         Donation
@@ -259,7 +264,7 @@
           </div>
         </div>
       </div>
-
+-->
       <a name="faq"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
         FAQ
@@ -272,7 +277,7 @@
               Q1. データパックの導入方法を知りたい。
             </a>
             <div class="uk-accordion-content">
-              <p>A1. こちらのリンク先にて導入方法を解説しています。</p>
+              <p>A1. 各自検索等を駆使して調べてください。</p>
             </div>
           </li>
           <li>
@@ -330,14 +335,16 @@
 
         <div class="uk-flex-center uk-margin-large-top" uk-grid>
           <div>
-            <a class="" uk-icon="icon:twitter; ratio:2" href="#"></a>
+            <a class="" uk-icon="icon:twitter; ratio:2" href="https://twitter.com/MCPanilla"></a>
           </div>
           <div>
-            <a class="" uk-icon="icon:youtube; ratio:2" href="#"></a>
+            <a class="" uk-icon="icon:youtube; ratio:2" href="https://www.youtube.com/channel/UCcxRkFmLlQg8U9GTYjPuycg"></a>
           </div>
+<!--
           <div>
             <a class="" uk-icon="icon:discord; ratio:2" href="#"></a>
           </div>
+-->
         </div>
     </div>
     <div class="uk-flex uk-flex-center uk-margin-top">
