--- a/member.html
+++ b/member.html
@@ -84,7 +84,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/unknown.png" alt="">
+                <img src="./img/member/denden.png" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">でんでん</h3>
@@ -175,7 +175,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/unknown.png" alt="">
+                <img src="./img/member/tazan.png" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">ターザン(TAZN)</h3>
@@ -188,7 +188,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/unknown.png" alt="">
+                <img src="./img/member/azumaru.png" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">あずまる</h3>
