--- a/member.html
+++ b/member.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/uikit.min.css" />
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
+    <link rel="icon" href="img/favicon.ico" />
   </head>
   <body>
 
@@ -67,8 +68,9 @@
 
       <div class="">
         <div class="uk-background-cover uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-top: true; offset-bottom: 70">
+          <img data-src="img/logo.png" width="200vh" uk-img>
           <p class="uk-heading-2xlarge uk-text-muted">
-            Panilla Members
+             Members
           </p>
         </div>
       </div>
