--- a/attention.html
+++ b/attention.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/uikit.min.css" />
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
+    <link rel="icon" href="img/favicon.ico" />
   </head>
   <body>
     <div uk-sticky class="uk-background-muted uk-visible@s">
