--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/uikit.min.css" />
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
+    <link rel="icon" href="img/favicon.ico" />
   </head>
   <body>
 
@@ -68,9 +69,8 @@
 
       <div class="">
         <div class="uk-background-cover uk-background-fixed uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(./img/top.jpg);" uk-height-viewport="offset-top: true; offset-bottom: 5">
-          <p class="uk-heading-2xlarge uk-text-success uk-overlay uk-overlay-default">
-            Panilla
-          </p>
+          <!--<p class="uk-heading-2xlarge uk-text-success uk-overlay uk-overlay-default"></p>-->
+          <img data-src="img/logo.png" width="500vh" uk-img>
         </div>
       </div>
 
