--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
         </div>
       </div>
-
+<!--
       <div class="uk-margin-large-top uk-width-4-5@m uk-container">
         <div class="uk-flex uk-margin-top">
           <div class="uk-width-1-2 uk-margin-large-right">
@@ -113,6 +113,7 @@
           </div>
         </div>
       </div>
+-->
 
       <a name="topics"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
@@ -321,8 +322,8 @@
             </div>-->
             <a class="uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle"  href="./member.html" uk-grid>
               <div class="uk-card-media-left uk-cover-container">
-                <img src="img/unknown.png" alt="" uk-cover>
-                <canvas width="300" height="200"></canvas>
+                <img src="img/logo.png" alt="" uk-cover>
+                <canvas width="200" height="200"></canvas>
               </div>
               <div>
                 <div class="uk-card-body">
