--- a/project.html
+++ b/project.html
@@ -98,14 +98,16 @@
 
       <div class="uk-flex-center uk-margin-large-top" uk-grid>
         <div>
-          <a class="" uk-icon="icon:twitter; ratio:2" href="#"></a>
+          <a class="" uk-icon="icon:twitter; ratio:2" href="https://twitter.com/MCPanilla"></a>
         </div>
         <div>
-          <a class="" uk-icon="icon:youtube; ratio:2" href="#"></a>
+          <a class="" uk-icon="icon:youtube; ratio:2" href="https://www.youtube.com/channel/UCcxRkFmLlQg8U9GTYjPuycg"></a>
         </div>
+<!--
         <div>
           <a class="" uk-icon="icon:discord; ratio:2" href="#"></a>
         </div>
+-->
       </div>
     </div>
 
