--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <img data-src="./img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="" uk-img><br>
                 画面上に方角を表示させるデータパックです<br>
                 制作者 でんでん<br>
-                <span uk-icon="icon: cloud-download"></span> <a href="./dist/dendens_Compass_Resources.zip">dendens_Compass_Resources</a>
+                <span uk-icon="icon: cloud-download"></span> <a href="./dist/denden_compass/dendens_compass.zip">dendens_Compass_Resources</a>
                 <div>
                   <ul uk-accordion class="uk-background-muted">
                     <li>
@@ -205,7 +205,7 @@
 
                         2.ホットバーの一番右を使用して表示<br>
                         ※ホットバー１番右のアイテムが消えるので注意！<br>
-                        ※リソースパック「denden's_Compass_Resources」必須<br>
+                        ※リソースパック「<a href="./dist/denden_compass/dendens_compass.zip">denden's_Compass_Resources</a>」必須<br>
                         <img data-src="./img/dendens_Compass_Resources/2.png" width="500" alt="" uk-img><br>
 
                         3.アクションバーに常に表示<br>
@@ -213,18 +213,18 @@
 
                         使い方(チャット欄で入力)<br>
                         最初に必ずこれを<br>
-                        /function minecraft:load<br>
+                        /function #minecraft:load<br>
 
                         コンパスの表示<br>
                         /function compass_main:compass_on<br>
                         コンパスの非表示<br>
                         /function compass_main:compass_off<br>
                         コンパス１にセット<br>
-                        /function compass_manage:process_set1<br>
+                        /function compass_manage:set2<br>
                         コンパス２にセット<br>
-                        /function compass_manage:process_set2<br>
+                        /function compass_manage:set2<br>
                         コンパス３にセット<br>
-                        /function compass_manage:process_set3<br>
+                        /function compass_manage:set3<br>
                       </div>
                     </li>
                   </ul>
