--- a/member.html
+++ b/member.html
@@ -122,6 +122,7 @@
               </div>
             </div>
           </div>
+<!--
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
@@ -130,11 +131,12 @@
               <div class="uk-card-body">
                 <h3 class="uk-card-title">ALLICIN (ｱﾘｼﾝ)</h3>
                 <p>コメントなし</p>
-                <!-- <a class="" uk-icon="icon:twitter; ratio:1.5" href="https://twitter.com/C0MET_JP"></a><a href="https://twitter.com/C0MET_JP">@C0MET_JP</a><br> -->
+                <a class="" uk-icon="icon:twitter; ratio:1.5" href="https://twitter.com/C0MET_JP"></a><a href="https://twitter.com/C0MET_JP">@C0MET_JP</a><br>
                 <span class="uk-badge">texture</span><br>
               </div>
             </div>
           </div>
+-->
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
