--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <img data-src="./img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="" uk-img><br>
                 画面上に方角を表示させるデータパックです<br>
                 制作者 でんでん<br>
-                <span uk-icon="icon: cloud-download"></span> <a href="./dist/denden_compass/dendens_compass.zip">dendens_Compass_Resources</a>
+                <span uk-icon="icon: cloud-download"></span> <a href="./dist/denden_compass/dendens_compass.zip">dendens_compass</a>
                 <div>
                   <ul uk-accordion class="uk-background-muted">
                     <li>
@@ -205,7 +205,7 @@
 
                         2.ホットバーの一番右を使用して表示<br>
                         ※ホットバー１番右のアイテムが消えるので注意！<br>
-                        ※リソースパック「<a href="./dist/denden_compass/dendens_compass.zip">denden's_Compass_Resources</a>」必須<br>
+                        ※リソースパック「<a href="./dist/denden_compass/dendens_Compass_Resources.zip">denden's_Compass_Resources</a>」必須<br>
                         <img data-src="./img/dendens_Compass_Resources/2.png" width="500" alt="" uk-img><br>
 
                         3.アクションバーに常に表示<br>
