--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
                 ファンタジー風リソースパック 疑似レイトレーシング対応<br>
                 制作者 mutuki_1204<br>
                 <span uk-icon="icon: cloud-download"></span><br>
-                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.16_v1.015.zip">TEX_D2 NE_32x_1.16_v1.015</a><br>
-                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.17_v1.015.zip">TEX_D2 NE_32x_1.17.x_v1.015</a><br>
-                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.18_v1.015.zip">TEX_D2 NE_32x_1.18.x_v1.015</a><br>
+                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.16_v1.018.zip">TEX_D2 NE_32x_1.16</a><br>
+                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.17_v1.018.zip">TEX_D2 NE_32x_1.17.x</a><br>
+                <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.18_v1.018.zip">TEX_D2 NE_32x_1.18.x</a><br>
                 <div>
                   <img data-src="./img/TEX_D2_32x/1.png" width="500" alt="" uk-img><br>
                   <img data-src="./img/TEX_D2_32x/2.jpeg" width="500" alt="" uk-img><br>
