--- a/attention.html
+++ b/attention.html
@@ -67,14 +67,38 @@
 
     <div class="uk-text-break uk-margin-large-left uk-margin-large-right">
       <div class="uk-heading-small uk-heading-divider">
-        利用規約・免責事項
+        利用規約
       </div>
+
+      <a name="copyright"></a>
       <div class="uk-margin-medium-top">
         <div class="uk-article-title uk-heading-bullet">
-          利用規約
+          著作権
         </div>
         <div class="uk-text-lead">
-          ここに利用規約
+          当サイトに掲載されている文章・画像・作品等の著作権は、作成者又は当グループに帰属しています。<br>
+          法的に認められている引用の範囲を超えて、無断で転載することを禁止します。<br><br>
+
+          よくある質問
+<pre>
+  Q1. 配布データを使って動画撮影や配信をしてもいいですか？
+  A1. 禁止なわけありません。じゃんじゃんお願いします。
+
+  Q2. クレジット表記は必要？
+  A2. なくても大丈夫ですが、してくれると中の人たちが喜びます。
+
+  Q3. マルチをするためにメンバーに配布データを直接渡してもいい？
+  A3. このサイトへのリンクを貼ってもらえると…とてもうれしい…
+
+  Q4. 中身のデータを覗いてもいい…？
+  A4. もちろん大丈夫です。何かの参考になさってください。
+
+  Q5. 中身のデータを書き換えて使ってもいい？
+  A5. 製作者の意図を汲み取っていただけるなら、お控え願います。
+  完全に禁止には致しませんが、あくまで著作権は当グループ・メンバーに帰属します。
+  もし、そのデータを自身が制作したことにするならば、それは立派な法令違反です。
+</pre>
+
         </div>
       </div>
 
@@ -106,15 +130,6 @@
           当サイトからのリンクやバナーなどで移動したサイトで提供される情報、サービス等について一切の責任を負いません。
           また当サイトのコンテンツ・情報について、できる限り正確な情報を提供するように努めておりますが、正確性や安全性を保証するものではありません。情報が古くなっていることもございます。
           当サイトに掲載された内容によって生じた損害等の一切の責任を負いかねますのでご了承ください。
-        </div>
-      </div>
-      <div class="uk-margin-medium-top">
-        <div class="uk-article-title uk-heading-bullet">
-          著作権
-        </div>
-        <div class="uk-text-lead">
-          当サイトに掲載されている文章・画像・作品等の著作権は、作成者又は当グループに帰属しています。
-          法的に認められている引用の範囲を超えて、無断で転載することを禁止します。
         </div>
       </div>
     </div>
