--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               Q1. データパックの導入方法を知りたい。
             </a>
             <div class="uk-accordion-content">
-              <p>A1. 各自検索等を駆使して調べてください。</p>
+              <p>A1. 現在準備中のため、各自検索等を駆使して調べてください。</p>
             </div>
           </li>
           <li>
@@ -292,15 +292,23 @@
               Q2. 対応バージョンを知りたいです。
             </a>
             <div class="uk-accordion-content">
-              <p>A2. Downloadsからダウンロードしたいデータパックを選択すると対応バージョンが書いてあります。</p>
+              <p>A2. <a href="#downloads">Downloads</a>からダウンロードしたいデータパックを選択すると対応バージョンが書いてあります。</p>
             </div>
           </li>
           <li>
             <a class="uk-accordion-title uk-background-muted" href="#">
-              Q2. Bedrockエディションで遊べますか？
+              Q3. Bedrockエディションで遊べますか？
             </a>
             <div class="uk-accordion-content">
-              <p>A2. minecraftの仕様上現在対応しているエディションはJavaエディションのみになります。</p>
+              <p>A3. minecraftの仕様上現在対応しているエディションはJavaエディションのみになります。</p>
+            </div>
+          </li>
+          <li>
+            <a class="uk-accordion-title uk-background-muted" href="#">
+              Q4. 著作権関係について知りたい
+            </a>
+            <div class="uk-accordion-content">
+              <p>A4. <a href="./attention.html#copyright">こちら</a>のページをご覧ください。</p>
             </div>
           </li>
         </ul>
@@ -355,7 +363,7 @@
         </div>
     </div>
     <div class="uk-flex uk-flex-center uk-margin-top">
-      <a href="./attention.html">利用規約・免責事項</a>
+      <a href="./attention.html">利用規約</a>
     </div>
 
     <hr>
