--- a/attention.html
+++ b/attention.html
@@ -10,60 +10,60 @@
     <link rel="icon" href="img/favicon.ico" />
   </head>
   <body>
-    <div uk-sticky class="uk-background-muted uk-visible@s">
-      <nav class="uk-navbar">
-        <div class="uk-navbar-center">
-          <ul class="uk-navbar-nav">
-            <li>
-              <a href="./index.html#top"><span uk-icon="home" class="uk-margin-small-right"></span>
-                Top
-              </a>
-            </li>
-            <li>
-              <a href="./index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
-                Download
-              </a>
-            </li>
-<!--
-            <li>
-              <a href="./index.html#guide"><span uk-icon="file-text" class="uk-margin-small-right"></span>
-                Guide
-              </a>
-            </li>
--->
-            <li>
-              <a href="./index.html#faq"><span uk-icon="question" class="uk-margin-small-right"></span>
-                FAQ
-              </a>
-            </li>
-            <li>
-              <a href="./index.html#about"><span uk-icon="users" class="uk-margin-small-right"></span>
-                About
-              </a>
-            </li>
-          </ul>
+
+
+        <div uk-sticky class="uk-background-muted uk-visible@s">
+          <nav class="uk-navbar">
+            <div class="uk-navbar-center">
+              <ul class="uk-navbar-nav">
+                <li>
+                  <a href="./index.html#top"><span uk-icon="home" class="uk-margin-small-right"></span>
+                    Top
+                  </a>
+                </li>
+                <li>
+                  <a href="./index.html#topics"><span uk-icon="file-text" class="uk-margin-small-right"></span>
+                    Topics
+                  </a>
+                </li>
+                <li>
+                  <a href="./index.html#downloads"><span uk-icon="download" class="uk-margin-small-right"></span>
+                    Download
+                  </a>
+                </li>
+                <li>
+                  <a href="./index.html#faq"><span uk-icon="question" class="uk-margin-small-right"></span>
+                    FAQ
+                  </a>
+                </li>
+                <li>
+                  <a href="./index.html#about"><span uk-icon="users" class="uk-margin-small-right"></span>
+                    About
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
-      </nav>
-    </div>
 
-    <nav class="uk-navbar uk-navbar-container uk-hidden@s" uk-sticky>
-      <div class="uk-navbar-left">
-        <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#" uk-toggle="target: #offcanvas-push"></a>
-      </div>
-    </nav>
+        <nav class="uk-navbar uk-navbar-container uk-hidden@s" uk-sticky>
+          <div class="uk-navbar-left">
+            <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#" uk-toggle="target: #offcanvas-push"></a>
+          </div>
+        </nav>
 
-    <div id="offcanvas-push" uk-offcanvas="mode: push; overlay: false">
-      <div class="uk-offcanvas-bar">
-        <button class="uk-offcanvas-close" type="button" uk-close></button>
-        <ul class="uk-nav">
-          <li><a href="#">TOP</a></li>
-          <li><a href="#downloads">DOWNLOAD</a></li>
-<!--          <li><a href="#guide">GUIDE</a></li>-->
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#about">ABOUT</a></li>
-        </ul>
-      </div>
-    </div>
+        <div id="offcanvas-push" uk-offcanvas="mode: push; overlay: false">
+          <div class="uk-offcanvas-bar">
+            <button class="uk-offcanvas-close" type="button" uk-close></button>
+            <ul class="uk-nav">
+              <li><a href="./index.html#">TOP</a></li>
+              <li><a href="./index.html#topics">TOPICS</a></li>
+              <li><a href="./index.html#downloads">DOWNLOAD</a></li>
+              <li><a href="./index.html#faq">FAQ</a></li>
+              <li><a href="./index.html#about">ABOUT</a></li>
+            </ul>
+          </div>
+        </div>
 
     <div class="uk-text-break uk-margin-large-left uk-margin-large-right">
       <div class="uk-heading-small uk-heading-divider">
