--- a/member.html
+++ b/member.html
@@ -69,7 +69,7 @@
       <div class="">
         <div class="uk-background-cover uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-top: true; offset-bottom: 70">
           <!--<img data-src="img/logo.png" width="100vh" uk-img>-->
-          <p class="uk-heading-2xlarge uk-text-muted uk-heading-small@s">
+          <p class="uk-heading-2xlarge uk-text-muted uk-heading-small@m">
              Members
           </p>
         </div>
