--- a/attention.html
+++ b/attention.html
@@ -80,24 +80,24 @@
           法的に認められている引用の範囲を超えて、無断で転載することを禁止します。<br><br>
 
           よくある質問
-<pre>
-  Q1. 配布データを使って動画撮影や配信をしてもいいですか？
-  A1. 禁止なわけありません。じゃんじゃんお願いします。
+          <div class="uk-card-body">
+            Q1. 配布データを使って動画撮影や配信をしてもいいですか？<br>
+            A1. 禁止なわけありません。じゃんじゃんお願いします。<br><br>
 
-  Q2. クレジット表記は必要？
-  A2. なくても大丈夫ですが、してくれると中の人たちが喜びます。
+            Q2. クレジット表記は必要？<br>
+            A2. なくても大丈夫ですが、してくれると中の人たちが喜びます。<br><br>
 
-  Q3. マルチをするためにメンバーに配布データを直接渡してもいい？
-  A3. このサイトへのリンクを貼ってもらえると…とてもうれしい…
+            Q3. マルチをするためにメンバーに配布データを直接渡してもいい？<br>
+            A3. このサイトへのリンクを貼ってもらえると…とてもうれしい…<br><br>
 
-  Q4. 中身のデータを覗いてもいい…？
-  A4. もちろん大丈夫です。何かの参考になさってください。
+            Q4. 中身のデータを覗いてもいい…？<br>
+            A4. もちろん大丈夫です。何かの参考になさってください。<br><br>
 
-  Q5. 中身のデータを書き換えて使ってもいい？
-  A5. 製作者の意図を汲み取っていただけるなら、お控え願います。
-  完全に禁止には致しませんが、あくまで著作権は当グループ・メンバーに帰属します。
-  もし、そのデータを自身が制作したことにするならば、それは立派な法令違反です。
-</pre>
+            Q5. 中身のデータを書き換えて使ってもいい？<br>
+            A5. 製作者の意図を汲み取っていただけるなら、お控え願います。<br>
+            完全に禁止には致しませんが、あくまで著作権は当グループ・メンバーに帰属します。<br>
+            もし、そのデータを自身が制作したことにするならば、それは立派な法令違反です。<br>
+          </div>
 
         </div>
       </div>
