--- a/index.html
+++ b/index.html
@@ -330,8 +330,16 @@
       </div>
       <div>
         <div class="uk-flex uk-flex-center">
-          <a class="uk-card uk-card-default uk-card-body uk-link-toggle" href="./project.html">
-            About this project
+          <a class="uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle"  href="./project.html" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+              <img src="img/top.jpg" alt="" uk-cover>
+              <canvas width="300" height="200"></canvas>
+            </div>
+            <div>
+              <div class="uk-card-body uk-card-small uk-text-large">
+                About this project
+              </div>
+            </div>
           </a>
           <!--<div class="uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
@@ -344,12 +352,12 @@
               </div>
             </div>-->
             <a class="uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle"  href="./member.html" uk-grid>
-              <div class="uk-card-media-left uk-cover-container">
+              <div class="uk-card-media-left uk-cover-container uk-card-large">
                 <img src="img/logo.png" alt="" uk-cover>
-                <canvas width="200" height="200"></canvas>
+                <canvas width="215" height="200"></canvas>
               </div>
               <div>
-                <div class="uk-card-body">
+                <div class="uk-card-body uk-card-small uk-text-large">
                   About us
                 </div>
               </div>
