--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
         About
       </div>
-      <div>
-        <div class="uk-flex uk-flex-center">
-          <a class="uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle"  href="./project.html" uk-grid>
+      <div class="uk-width-4-5 uk-container">
+        <div class="uk-child-width-expand@s uk-flex uk-flex-center" uk-grid>
+          <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle"  href="./project.html" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
               <img src="img/top.jpg" alt="" uk-cover>
               <canvas width="300" height="200"></canvas>
@@ -341,29 +341,19 @@
               </div>
             </div>
           </a>
-          <!--<div class="uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle" uk-grid>
-            <div class="uk-card-media-left uk-cover-container">
-              <img src="img/unknown.png" alt="" uk-cover>
-              <canvas width="300" height="200"></canvas>
+          <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle"  href="./member.html" uk-grid>
+            <div class="uk-card-media-left uk-cover-container uk-card-large">
+              <img src="img/logo.png" alt="" uk-cover>
+              <canvas width="200" height="200"></canvas>
             </div>
             <div>
-              <div class="uk-card-body">
+              <div class="uk-card-body uk-card-small uk-text-large">
                 About us
               </div>
-            </div>-->
-            <a class="uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle"  href="./member.html" uk-grid>
-              <div class="uk-card-media-left uk-cover-container uk-card-large">
-                <img src="img/logo.png" alt="" uk-cover>
-                <canvas width="215" height="200"></canvas>
-              </div>
-              <div>
-                <div class="uk-card-body uk-card-small uk-text-large">
-                  About us
-                </div>
-              </div>
-            </a>
-          </div>
+            </div>
+          </a>
         </div>
+      </div>
 
         <div class="uk-flex-center uk-margin-large-top" uk-grid>
           <div>
