--- a/member.html
+++ b/member.html
@@ -67,9 +67,9 @@
     <div class="uk-margin-left uk-margin-right">
 
       <div class="">
-        <div class="uk-background-cover uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-top: true; offset-bottom: 70">
+        <div class="uk-background-cover uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-top: true; offset-bottom: 80">
           <!--<img data-src="img/logo.png" width="100vh" uk-img>-->
-          <p class="uk-heading-2xlarge uk-text-muted uk-heading-small@m">
+          <p class="uk-text-muted uk-heading-small">
              Members
           </p>
         </div>
