--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <script src="js/uikit-icons.min.js"></script>
     <link rel="icon" href="img/favicon.ico" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QC1029L3GM"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHPW9TT8HY"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-QC1029L3GM');
+      gtag('config', 'G-JHPW9TT8HY');
     </script>
   </head>
   <body>
