--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       gtag('js', new Date());
 
       gtag('config', 'G-JHPW9TT8HY');
+      gtag('config', 'G-EJVE29HKM4');
     </script>
   </head>
   <body>
