--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/ fb# website: http://ogp.me/ns/website#">
     <title>Panilla!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta property="og:url" content="https://www.minecraftpanilla.com/" />
+    <meta property="og:type" content=" website" />
+    <meta property="og:title" content="minecraft Panilla" />
+    <meta property="og:description" content="どこから集まったのかよくわからないメンバーが、ぼちぼちデータ配布をしていきます。バニラから少しだけ寄り道をして、もっと楽しめるマイクラを目指しています。いつもと少しだけ違うマイクラで、多くの楽しみを見つけてみてください。" />
+    <meta property="og:site_name" content="Panilla" />
+    <meta property="og:image" content="/img/thum.jpg" />
+      
     <link rel="stylesheet" href="css/uikit.min.css" />
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
