--- a/index.html
+++ b/index.html
@@ -375,5 +375,6 @@
     <footer class="uk-flex uk-flex-center uk-margin-bottom">
       ©2021 Panilla Group
     </footer>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5468855186833609" crossorigin="anonymous"></script>
   </body>
 </html>
