--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
           <div class="uk-width-1-1 uk-card uk-card-default">
             <div class="uk-card-body">
               <div class="uk-card-title">
+                データパック・リソースパック配布第二弾  <nobr class="uk-text-meta">2022-06-06</nobr>
+              </div>
+              でんでんが制作したデータパック「dendens apex datapacks」がベータ配布開始！ 
+            </div>
+          </div>
+          <div class="uk-width-1-1 uk-card uk-card-default">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
                 データパック・リソースパック配布第一弾  <nobr class="uk-text-meta">2022-02-01</nobr>
               </div>
               でんでんが制作したデータパック「DENDEN'S COMPASS VER.1.0」が配布開始！ <br>
@@ -474,6 +482,6 @@
     <footer class="uk-flex uk-flex-center uk-margin-bottom">
       ©2021 Panilla Group
     </footer>
-    
+
   </body>
 </html>
