--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <div class="uk-container uk-width-4-5@m">
             <ul class="uk-switcher switcher-container">
               <li>
-                <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.18.2</span>
+                <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.18.2</span>
               </li>
               <li>
                 <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.18.1</span>
@@ -223,6 +223,7 @@
                 制作者 でんでん<br>
                 <span uk-icon="icon: cloud-download"></span>
                 <a href="./dist/dendens_apex_datapacks/dendens_apex_datapacks_openBeta.zip">dendens_apex_datapacks_openBeta</a><br>
+                <a href="./dist/dendens_apex_datapacks/dendens_apex_resourcepack.zip">dendens_apex_resourcepack</a><br>
 
                 <div>
                   <ul uk-accordion class="uk-background-muted">
