--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               でんでんが制作したデータパック「dendens apex datapacks」がベータ配布開始！
             </div>
           </div>
-          <div class="uk-width-1-1 uk-card uk-card-default">
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
             <div class="uk-card-body">
               <div class="uk-card-title">
                 データパック・リソースパック配布第一弾  <nobr class="uk-text-meta">2022-02-01</nobr>
